samples/_failures_safe/1761094759_7a84fc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ab2f460e.c: In function ‘matrix_transpose’:
./samples/SAFE/__tmp_ab2f460e.c:152:13: error: expected declaration or statement at end of input
  152 |             result[j][i] = matrix[i][j];
      |             ^~~~~~
./samples/SAFE/__tmp_ab2f460e.c:152:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ab2f460e.c:152:13: error: expected declaration or statement at end of input
